--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.2.2</version>
   </parent>
   <artifactId>assertj-assertions-generator</artifactId>
-  <version>1.3.0-SNAPSHOT</version>
+  <version>1.3.0-entrypoint-package-SNAPSHOT</version>
   <name>AssertJ Assertions Generator</name>
 
   <scm>
